# django-atomicserver

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/todo/backend/: pyproject.toml
examples/todo/backend/tasks/migrations/: 0001_initial.py
examples/todo/backend/todo_api/: settings.py  urls.py
examples/todo/frontend/: index.html  package.json  playwright.config.ts
examples/todo/frontend/src/: main.ts
examples/todo/frontend/tests/: todo.spec.ts
src/atomicserver/: atomic.py  urls.py  views.py
src/atomicserver/management/commands/: atomicserver.py
src/django_atomicserver/: __init__.py
tests/: test_views.py
tests/test_app/: models.py
tests/test_app/migrations/: 0001_initial.py
tests/test_project/: settings.py  urls.py
