[project]
name = "django-atomicserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Han Hwang Lim", email = "hanhwanglim@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
django-atomicserver = "django_atomicserver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
